# churn

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile.airflow  Dockerfile.api  Makefile  README.md  compose.yaml  main.tf  pyproject.toml  requirements.airflow.txt  requirements.api.txt  requirements.txt  ruff.toml
airflow/dags/: model_training.py
scripts/: deploy.sh  export_model.py  test_api.py
src/churn/: __init__.py  logger.py
src/churn/api/: main.py
src/churn/data/: __init__.py  download.py  feature_engineering.py  features.py  load.py  preprocess.py
src/churn/model/: __init__.py  test.py  train.py
