[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.8.9,<0.9" ]

[project]
name = "churn"
version = "0.1.0"
description = "Simple customer churn prediction"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "kaggle>=1.7.4.5",
  "mlflow>=3.2",
  "python-dotenv>=1.1.1",
  "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
  "ruff>=0.12.8",
]

airflow = [
  "apache-airflow>=3.0.4",
]
api = [
  "fastapi>=0.116.1",
  "mlflow>=3.2",
]

[tool.uv]
package = true
